--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -3,22 +3,27 @@
 name="Android"
 platform="Android"
 runnable=true
+advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="Build/Blocks_in_Bits.apk"
+export_path="Build/blocks-in-bits.apk"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
 encrypt_directory=false
+script_export_mode=2
 
 [preset.0.options]
 
 custom_template/debug=""
 custom_template/release=""
 gradle_build/use_gradle_build=false
+gradle_build/gradle_build_directory=""
+gradle_build/android_source_template=""
+gradle_build/compress_native_libraries=false
 gradle_build/export_format=0
 gradle_build/min_sdk=""
 gradle_build/target_sdk=""
@@ -28,8 +33,8 @@ architectures/x86=false
 architectures/x86_64=false
 version/code=1
 version/name="1.0"
-package/unique_name="com.tfcb93.mobiletest"
-package/name="Mobile Test"
+package/unique_name="com.tfcb93.blocksinbits"
+package/name="Blocks in Bits"
 package/signed=true
 package/app_category=2
 package/retain_data_on_uninstall=false
@@ -37,7 +42,7 @@ package/exclude_from_recents=false
 package/show_in_android_tv=false
 package/show_in_app_library=true
 package/show_as_launcher_app=false
-launcher_icons/main_192x192="res://Resources/Images/icon.png"
+launcher_icons/main_192x192="res://Resources/Images/icon-192.png"
 launcher_icons/adaptive_foreground_432x432="res://Resources/Images/icon-432.png"
 launcher_icons/adaptive_background_432x432="res://Resources/Images/icon-432.png"
 graphics/opengl_debug=false
@@ -134,6 +139,7 @@ permissions/mount_format_filesystems=false
 permissions/mount_unmount_filesystems=false
 permissions/nfc=false
 permissions/persistent_activity=false
+permissions/post_notifications=false
 permissions/process_outgoing_calls=false
 permissions/read_calendar=false
 permissions/read_call_log=false
@@ -165,7 +171,7 @@ permissions/set_alarm=false
 permissions/set_always_finish=false
 permissions/set_animation_scale=false
 permissions/set_debug_app=false
-permissions/set_orientation=false
+permissions/set_orientation=true
 permissions/set_pointer_speed=false
 permissions/set_preferred_applications=false
 permissions/set_process_limit=false
@@ -202,3 +208,86 @@ permissions/write_user_dictionary=false
 xr_features/hand_tracking=0
 xr_features/hand_tracking_frequency=0
 xr_features/passthrough=0
+
+[preset.1]
+
+name="Web"
+platform="Web"
+runnable=true
+advanced_options=true
+dedicated_server=false
+custom_features=""
+export_filter="resources"
+export_files=PackedStringArray("res://Resources/blocks/black.tres", "res://Resources/blocks/blue.tres", "res://Resources/blocks/brown.tres", "res://Resources/blocks/green.tres", "res://Resources/blocks/orange.tres", "res://Resources/blocks/pink.tres", "res://Resources/blocks/purple.tres", "res://Resources/blocks/red.tres", "res://Resources/blocks/yellow.tres", "res://Resources/Fonts/Jersey_10/Jersey10-Regular.ttf", "res://Resources/Images/GUI/btn.png", "res://Resources/Images/GUI/btn_disabled.png", "res://Resources/Images/GUI/btn_flat.png", "res://Resources/Images/GUI/btn_focus.png", "res://Resources/Images/GUI/btn_hover.png", "res://Resources/Images/GUI/btn_pressed.png", "res://Resources/Images/arrow.png", "res://Resources/Images/bag.png", "res://Resources/Images/base_block.png", "res://Resources/Images/base_block_old.png", "res://Resources/Images/down.png", "res://Resources/Images/multi.png", "res://Resources/Images/points.png", "res://Resources/Images/resistance.png", "res://Resources/Shaders/background.gdshader", "res://Resources/Shaders/background_shader_material.tres", "res://Resources/tools/drill.tres", "res://Resources/tools/hammer.tres", "res://Resources/tools/pickaxe.tres", "res://Resources/upgrades/depths_1.tres", "res://Resources/upgrades/depths_2.tres", "res://Resources/upgrades/depths_3.tres", "res://Resources/upgrades/mark_1.tres", "res://Resources/upgrades/mark_2.tres", "res://Resources/upgrades/mark_3.tres", "res://Resources/upgrades/test_1.tres", "res://Resources/upgrades/ultimate_1.tres", "res://Resources/big_number_label_settings.tres", "res://Resources/big_text_label.tres", "res://Resources/blocks_in_bits_theme.tres", "res://Resources/normal_text_label.tres", "res://Resources/player_info_label.tres", "res://Resources/small_label_text.tres", "res://Resources/timer_number_label_settings.tres", "res://Resources/title_label.tres", "res://Resources/very_small_label_text.tres", "res://Scenes/block.tscn", "res://Scenes/block_pile.tscn", "res://Scripts/upgrade.gd", "res://Scenes/credits.tscn", "res://Scenes/game.tscn", "res://Scenes/game_over.tscn", "res://Scenes/instructions.tscn", "res://Scenes/level.tscn", "res://Scenes/mode_selection.tscn", "res://Scenes/pause_screen.tscn", "res://Scenes/player.tscn", "res://Scenes/settings.tscn", "res://Scenes/shop.tscn", "res://Scenes/start_screen.tscn", "res://Scripts/block.gd", "res://Scripts/block_pile.gd", "res://Scripts/block_sequence.gd", "res://Scripts/credits.gd", "res://Scripts/events.gd", "res://Scripts/game.gd", "res://Scripts/game_over.gd", "res://Scripts/globals.gd", "res://Scripts/instructions.gd", "res://Scripts/level.gd", "res://Scripts/mode_selection.gd", "res://Scripts/pause_screen.gd", "res://Scripts/player.gd", "res://Scripts/settings.gd", "res://Scripts/shop.gd", "res://Scripts/start_screen.gd", "res://Scripts/tool.gd")
+include_filter=""
+exclude_filter=""
+export_path="Build/web/index.html"
+encryption_include_filters=""
+encryption_exclude_filters=""
+encrypt_pck=false
+encrypt_directory=false
+script_export_mode=1
+
+[preset.1.options]
+
+custom_template/debug=""
+custom_template/release=""
+variant/extensions_support=false
+variant/thread_support=false
+vram_texture_compression/for_desktop=true
+vram_texture_compression/for_mobile=true
+html/export_icon=true
+html/custom_html_shell=""
+html/head_include=""
+html/canvas_resize_policy=2
+html/focus_canvas_on_start=true
+html/experimental_virtual_keyboard=false
+progressive_web_app/enabled=false
+progressive_web_app/ensure_cross_origin_isolation_headers=true
+progressive_web_app/offline_page=""
+progressive_web_app/display=1
+progressive_web_app/orientation=1
+progressive_web_app/icon_144x144=""
+progressive_web_app/icon_180x180=""
+progressive_web_app/icon_512x512=""
+progressive_web_app/background_color=Color(0, 0, 0, 1)
+
+[preset.2]
+
+name="Linux"
+platform="Linux"
+runnable=true
+advanced_options=false
+dedicated_server=false
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="Build/blocks-in-bits.x86_64"
+encryption_include_filters=""
+encryption_exclude_filters=""
+encrypt_pck=false
+encrypt_directory=false
+script_export_mode=2
+
+[preset.2.options]
+
+custom_template/debug=""
+custom_template/release=""
+debug/export_console_wrapper=1
+binary_format/embed_pck=true
+texture_format/s3tc_bptc=true
+texture_format/etc2_astc=false
+binary_format/architecture="x86_64"
+ssh_remote_deploy/enabled=false
+ssh_remote_deploy/host="user@host_ip"
+ssh_remote_deploy/port="22"
+ssh_remote_deploy/extra_args_ssh=""
+ssh_remote_deploy/extra_args_scp=""
+ssh_remote_deploy/run_script="#!/usr/bin/env bash
+export DISPLAY=:0
+unzip -o -q \"{temp_dir}/{archive_name}\" -d \"{temp_dir}\"
+\"{temp_dir}/{exe_name}\" {cmd_args}"
+ssh_remote_deploy/cleanup_script="#!/usr/bin/env bash
+kill $(pgrep -x -f \"{temp_dir}/{exe_name} {cmd_args}\")
+rm -rf \"{temp_dir}\""
